tests/ui/traits/rc-not-send.stderr
error[E0277]: `Rc<{integer}>` cannot be sent between threads safely
  --> $DIR/rc-not-send.rs:9:19
   |
LL |     requires_send(rc_value);
   |     ------------- ^^^^^^^^ `Rc<{integer}>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `Rc<{integer}>`
note: required by a bound in `requires_send`
  --> $DIR/rc-not-send.rs:5:21
   |
LL | fn requires_send<T: Send>(_: T) {}
   |                     ^^^^ required by this bound in `requires_send`
help: consider dereferencing here
   |
LL |     requires_send(*rc_value);
   |                   +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
